--- a/notify.yml
+++ b/notify.yml
@@ -1,8 +1,8 @@
 name: Notify n8n on GitHub Pages Deploy
 
 on:
-  page_build:
-    types: [completed]
+  deployment_status:
+    types: [success]
 
 jobs:
   notify:
@@ -12,6 +12,5 @@ jobs:
         run: |
           curl -X POST \
             -H "Content-Type: application/json" \
-            -d "{\"status\":\"deployed\",\"repo\":\"evenkik-Resume_url\"}" \
+            -d "{\"status\":\"deployed\",\"repo\":\"${{ github.repository }}\",\"env\":\"${{ github.event.deployment_status.environment }}\"}" \
             "https://n8n.srv1034010.hstgr.cloud/webhook-test/fcd6e2a2-d660-48b6-ac80-42f755d66c39"
-            
