--- a/.github/workflows/notify-n8n.yml
+++ b/.github/workflows/notify-n8n.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           COMMIT_MESSAGE=$(curl -s \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.workflow_run.head_sha }} \
             | jq -r '.commit.message')
           echo "message=$COMMIT_MESSAGE" >> $GITHUB_OUTPUT
