--- a/.github/workflows/notify-n8n.yml
+++ b/.github/workflows/notify-n8n.yml
@@ -16,16 +16,16 @@ jobs:
         run: |
           COMMIT_MESSAGE=$(curl -s \
             -H "Accept: application/vnd.github+json" \
-            -H "key: ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.workflow_run.head_sha }} \
             | jq -r '.commit.message')
           echo "message=$COMMIT_MESSAGE" >> $GITHUB_OUTPUT
 
-      - name: Send POST to n8n webhook with auth header
+      - name: Send POST to n8n webhook with header auth
         run: |
           curl -X POST \
             -H "Content-Type: application/json" \
-            -H "Authorization: ${{ secrets.N8N_AUTH_TOKEN }}" \
+            -H "key: ${{ secrets.N8N_AUTH_TOKEN }}" \
             -d "{\"status\": \"deployed\", \
                  \"repo\": \"${{ github.repository }}\", \
                  \"branch\": \"${{ github.ref_name }}\", \
